        - CLAP scheme now supports a default authority corresponding to
          the "class" authority for shorter URIs.
        - Added LocalReference#createClapReference(int, Package) and
          createClapReference(Package) static methods to help building
          CLAP URIs.
        - StatusService#getStatus(Throwable, Request, Response) doesn't
          log an error anymore.
    - Enhancements
        - UniformResource#doCatch now extract the cause exception from
          caught ResourceException instance for easier debugging.
        - The Request#abort() method is now supported by the Simple,
          Grizzly, Netty, Jetty and the internal HTTP server.
          Reported by Nicolas Rinaudo.
        - Response#onSent callback now called by other HTTP server than
          the internal one.
        - Added BioUtils.delete(...) methods to delete files and 
          directories, recursively if needed, while working around
          Windows file locking issues.
    - Bugs fixed
        - Fixed compilation issue in the ClientResource class for the
          GWT edition. Reported by Laszlo Megyer. 
        - Fixed internal client connector that removes the query part 
          of the target resource reference.
          Reported by Laurent Rustuel.
        - Fixed internal connector that was not setting properly the 
          ServerInfo. Reported by Laurent Rustuel.
        - Fixed regression when tunnelling user agent properties.
          Reported by Fabian Mandelbaum.
        - The 0 value of the "TimeToLive" parameter for the client 
          connectors was badly taken into account when setting the 
          expiration date. Reported by Fabian Mandelbaum.
        - Issue with line breaks that were removed when PUTting 
          a file. Contributed by Daniel Truemper.
        - Precondition check was wrong for 'if-unmodified-since' if
          dates were equals. Reported by Andreas Schneider.